# zhuangsheng

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  commands_artifact.rs  commands_config.rs  commands_context.rs  commands_conversation.rs  commands_exact.rs  commands_graph.rs  commands_memory.rs  commands_plugin.rs  commands_runtime_extra.rs  commands_secret.rs  commands_tool.rs  lib.rs  main.rs  plugin_updates.rs
crates/adapters/tauri/: Cargo.toml
crates/adapters/tauri/src/: artifact.rs  bootstrap.rs  config.rs  context.rs  conversation.rs  error.rs  exact.rs  lib.rs  memory.rs  plugin.rs  runtime.rs  secret.rs  test_plugin.rs  tool.rs
crates/core/: Cargo.toml
crates/core/src/: canonical.rs  compatibility.rs  context_merge.rs  context_merge_tests.rs  error.rs  lib.rs  runtime.rs  runtime_checkpoint.rs  scheduler.rs  schema.rs  selector.rs
crates/core/src/application/: artifact.rs  channel.rs  context.rs  conversation.rs  error.rs  graph.rs  memory.rs  mod.rs  plugin.rs  preset.rs  secret.rs  sillytavern.rs  tool.rs
crates/core/src/artifact/: types.rs
crates/core/src/canonical/: number.rs  parse.rs  tests.rs
crates/core/src/context_merge/: append.rs
crates/core/src/conversation/: contracts.rs  contracts_tests.rs  mod.rs  roleplay.rs  roleplay_memory.rs  roleplay_settings.rs  selection.rs  types.rs  views.rs
crates/core/src/graph/: apply.rs  coordination.rs  coordination_validation.rs  cycle.rs  llm.rs  llm_memory_validation.rs  llm_tests.rs  llm_validation.rs  memory.rs  mod.rs  normalize.rs  router_tests.rs  router_validation.rs  tests.rs  types.rs
crates/core/src/llm/: channel.rs  channel_validation.rs  count_ledger.rs  error.rs  ledger.rs  memory_tool_batch.rs  memory_tool_batch_tests.rs  memory_tool_batch_validation.rs  memory_tool_ledger.rs  mod.rs  output.rs  output_repair_ledger.rs  request_builder.rs  request_builder_hosted.rs  request_builder_memory.rs  request_builder_tests.rs  request_builder_tools.rs  secret.rs  service_operations.rs  service_validation.rs  service_validation_tests.rs  stream_ledger.rs  tests.rs  tool_batch.rs  tool_batch_tests.rs  tool_ledger.rs  tool_registry.rs  tool_registry_validation.rs
crates/core/src/memory/: mod.rs  types.rs  validate.rs
crates/core/src/router/: ast.rs  decision.rs  decision_tests.rs  error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  tests.rs  value.rs
crates/core/src/schema/: validate.rs
crates/core/src/state/: mod.rs  patch.rs  tests.rs  types.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: git.rs  lib.rs  manager.rs  package.rs  package_tests.rs  source.rs  staging.rs  update.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  llm_executor.rs  llm_executor_support.rs  llm_executor_tests.rs  main.rs  model_discovery.rs  provider.rs  stream_events.rs  tests.rs  tool_executor.rs
crates/server/src/api/: artifact.rs  artifact_upload.rs  channel.rs  context.rs  context_merge.rs  conversation.rs  conversation_candidate.rs  effect.rs  error.rs  graph.rs  graph_roleplay.rs  memory.rs  mod.rs  plugin.rs  preset.rs  runtime.rs  secret.rs  sillytavern.rs  tool.rs
crates/server/src/llm_executor/: attempt_resume.rs  count_resume.rs  counting.rs  counting_pause.rs  counting_provider.rs  counting_state.rs  hosted_tools.rs  memory_tools.rs  model_call.rs  model_completed_resume.rs  model_completion.rs  model_effect.rs  model_request.rs  model_retry.rs  model_stream.rs  model_stream_batch.rs  model_stream_failure.rs  model_transport.rs  opaque_resources.rs  output_repair.rs  text_transform.rs  tool_dispatch.rs  tool_retry.rs
crates/server/src/llm_executor_tests/: count_recovery.rs  counting_provider.rs  counting_provider_recovery.rs  graph_fixture.rs  hosted_tools.rs  memory_search_tools.rs  memory_tools.rs  model_recovery.rs  opaque_storage.rs  output_repair.rs  provider_fixture.rs  secret_wait.rs  streaming.rs  tool_recovery.rs  tool_registry.rs
crates/server/src/provider/: provider_sse.rs  provider_stream.rs
crates/server/src/tests/: artifact.rs  config.rs  context_fork.rs  context_merge.rs  context_merge_resolution.rs  conversation.rs  conversation_profile.rs  conversation_projection_resolution.rs  conversation_turn.rs  effect_resolution.rs  model_discovery.rs  plugin.rs  roleplay_compatibility.rs  roleplay_journey.rs  roleplay_provider.rs  roleplay_template.rs  run_list.rs  secret.rs  sillytavern.rs  wait_response.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  store.rs
crates/storage/src/artifact/: commit.rs  commit_source.rs  list.rs  maintenance.rs  mod.rs  read.rs  rows.rs  staging.rs  staging_owner.rs  staging_service.rs  staging_support.rs  validation.rs
crates/storage/src/config/: channel.rs  mod.rs  preset.rs  preview.rs  rows.rs  service.rs  tool_registry.rs  tool_registry_rows.rs
crates/storage/src/context/: commit.rs  diff.rs  fork.rs  fork_support.rs  merge.rs  merge_append.rs  merge_append_history.rs  merge_base.rs  merge_commit.rs  merge_conflict.rs  merge_event.rs  merge_pointer.rs  merge_receipt.rs  merge_selection.rs  mod.rs  query.rs  replay.rs  service.rs  snapshot.rs
crates/storage/src/conversation/: contract.rs  create.rs  display_projection.rs  display_projection_tests.rs  events.rs  mod.rs  profile.rs  projection_resolution.rs  projection_resolution_support.rs  read.rs  read_candidate_error.rs  read_candidate_validation.rs  read_candidates.rs  read_list.rs  read_messages.rs  read_timeline.rs  read_turn.rs  receipt.rs  regenerate.rs  selection.rs  service.rs  submit.rs  submit_prepare.rs  submit_rows.rs  text_transform.rs  text_transform_tests.rs
crates/storage/src/graph/: apply.rs  create.rs  draft.rs  helpers.rs  llm_dependencies.rs  mod.rs  query.rs  roleplay.rs  roleplay_template.rs  schema_bundle.rs  service.rs  types.rs
crates/storage/src/llm/: count_ledger.rs  mod.rs  (+48 more)
(+383 files in other folders)
