[package]
name = "zhuangsheng-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
gproxy-protocol.workspace = true
hex.workspace = true
jsonschema.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
