[package]
name = "zhuangsheng-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
gix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
url.workspace = true
zeroize.workspace = true
zhuangsheng-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
