[package]
name = "zhuangsheng-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
zhuangsheng-core = { path = "../core" }
zhuangsheng-storage = { path = "../storage" }

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
