[package]
name = "zhuangsheng-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["http"]
http = ["dep:axum", "dep:tower-http"]

[[bin]]
name = "zhuangsheng-server"
path = "src/main.rs"
required-features = ["http"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream.workspace = true
axum = { workspace = true, optional = true }
futures-core.workspace = true
gproxy-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tower-http = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
url.workspace = true
zeroize.workspace = true
zhuangsheng-core = { path = "../core" }
zhuangsheng-storage = { path = "../storage" }

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
