[package]
name = "zhuangsheng-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
zhuangsheng-core = { path = "../core" }

[dev-dependencies]
tokio.workspace = true
