[package]
name = "zhuangsheng-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true
zeroize.workspace = true
zhuangsheng-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
