[package]
name = "zhuangsheng-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["tauri-runtime"]
tauri-runtime = ["dep:tauri", "tauri/wry"]

[workspace]

[lib]
name = "zhuangsheng_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false, features = [], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
zhuangsheng-core = { path = "../../../crates/core" }
zhuangsheng-server = { path = "../../../crates/server", default-features = false }
zhuangsheng-storage = { path = "../../../crates/storage" }
zhuangsheng-tauri-adapter = { path = "../../../crates/adapters/tauri" }
