[package]
name = "zhuangsheng-desktop"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["tauri-runtime"]
tauri-ipc = ["dep:tauri"]
tauri-runtime = ["tauri-ipc", "tauri/wry"]

[workspace]

[lib]
name = "zhuangsheng_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false, features = [], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"
zhuangsheng-core = { path = "../../../crates/core" }
zhuangsheng-plugin-host = { path = "../../../crates/plugin-host" }
zhuangsheng-server = { path = "../../../crates/server", default-features = false }
zhuangsheng-storage = { path = "../../../crates/storage" }
zhuangsheng-tauri-adapter = { path = "../../../crates/adapters/tauri" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
