[package]
name = "zhuangsheng-tauri-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
zeroize.workspace = true
zhuangsheng-core = { path = "../../core" }

[dev-dependencies]
tokio.workspace = true
zhuangsheng-storage = { path = "../../storage" }
